attempting to resolve double moving